objects/Playbook_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>New_Sale_Default_Playbook__c</fullName>
        <description>Name of the default playbook for &quot;New Sale&quot; opportunity.</description>
        <inlineHelpText>Name of the default playbook for &quot;New Sale&quot; opportunity.</inlineHelpText>
        <label>New Sale Default Playbook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Renewal_Default_Playbook__c</fullName>
        <description>Name of the default playbook for &quot;RFP Renewal&quot; opportunity.</description>
        <label>RFP Renewal Default Playbook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Default_Playbook__c</fullName>
        <description>Name of the default playbook for &quot;Renewal&quot; opportunity.</description>
        <inlineHelpText>Name of the default playbook for &quot;Renewal&quot; opportunity.</inlineHelpText>
        <label>Renewal Default Playbook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Playbook Settings</label>
</CustomObject>